# jskim

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  jskim.py  jskim_method.py  jskim_project.py  jskim_util.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/jskim/: __init__.py  cli.py  diff.py  method.py  project.py  skim.py  util.py
tests/: conftest.py  test_cli.py  test_diff.py  test_method.py  test_project.py  test_skim.py  test_util.py
tests/fixtures/: AnnotationType.java  AnonClassFields.java  AppConfiguration.java  BillingCalculator.java  BillingTaskDefinitions.java  BusinessUnitsDao.java  CabCreationConsumerConfiguration.java  CabUpdateKafkaConsumer.java  ComplexMixed.java  ContractType.java  EdgeCaseBugs.java  HealthConfiguration.java  ImplicitClass.java  InlineAnnotations.java  LambdaEdgeCases.java  LambdaFields.java  MammothRawTripDataReportTaskDefinitions.java  MammothRawTripRowMapper.java  ModernJavaFeatures.java  NestedAnnotations.java  RBDResultSetExtractor.java  RawTripDataReportTaskDefinitions.java  RawTripRowMapper.java  ReportStatus.java  Role.java  ScheduleServiceProxy.java  SealedAndMultiClass.java  SimpleDirection.java  StaticFieldService.java  StatusEnum.java  SwitchExprFields.java  TextBlockTest.java  TripEndKafkaConsumer.java  TripEndKafkaConsumerConfiguration.java
