[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jskim"
dynamic = ["version"]
description = "Token-saving Java file reader for Claude Code. Summarizes Java files compactly using tree-sitter, saving 70-80% of input tokens."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Garvit Joshi", email = "garvitjoshi9@gmail.com" },
]
keywords = [
    "java",
    "claude-code",
    "tree-sitter",
    "spring-boot",
    "token-saving",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tree-sitter>=0.25.0",
    "tree-sitter-java>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/garvit-joshi/jskim"
Repository = "https://github.com/garvit-joshi/jskim"
Issues = "https://github.com/garvit-joshi/jskim/issues"

[project.scripts]
jskim = "jskim.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.version]
path = "src/jskim/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jskim"]
